--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first canvas</title>
     <style>
+        body {
+            background-color: #1D70A2;
+        }
+
         canvas {
             border: 1px solid black;
 
@@ -14,6 +18,7 @@
         body {
             margin: 0;
             overflow: hidden;
+
         }
     </style>
 </head>
@@ -21,6 +26,7 @@
 <body>
     <canvas></canvas>
     <script src="canvas.js"></script>
+
 </body>
 
 </html>
